# OpenRuntime

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT_SUMMARY.md  Dockerfile  Dockerfile.enhanced  FIXES_IMPLEMENTED.md  FIXES_SUMMARY.md  LICENSE  Makefile  PUBLISH_TO_GITHUB.md  README.md  README_V2.md  cli_simple.py  cspell.json  docker-compose.enhanced.yml  docker-compose.yml  openruntime.py  openruntime_cli.py  openruntime_cli_v2.py  openruntime_enhanced.py  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  security.py  setup.py  setup_runtime.sh  test_runtime_basic.py  validate_fixes.py
.github/: REPOSITORY_TAGS.md  description.txt  markdown-link-check-config.json  pull_request_template.md  topics.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-cd.yml  ci.yml  docs.yml  performance.yml  quality.yml  release.yml  security.yml
config/: env.example  openruntime.yml
docs/: Gemfile  _config.yml  api-reference.md  architecture.md  cli-guide.md  getting-started.md  index.md
docs/tutorials/: 01-first-task.md  index.md
monitoring/: alert_rules.yml  prometheus.yml
monitoring/grafana/dashboards/: openruntime.json  openruntime_dashboard.json  openruntime_overview.json
monitoring/prometheus/: prometheus.yml
monitoring/prometheus/rules/: openruntime_alerts.yml
nginx/: nginx.conf
openruntime/: __init__.py  __main__.py  api_v2.py  main.py  main_v2.py  runtime_engine.py
openruntime/backends/: __init__.py  base_backend.py  cpu_backend.py  llm_cli_backend.py  mlx_backend.py  ollama_backend.py  onnx_backend.py  openai_backend.py  pytorch_backend.py
openruntime/core/: api.py  managers.py  models.py
openruntime/security/: __init__.py  security.py
openruntime_enhanced/: __init__.py  __main__.py  enhanced.py
rust-openai-crate/src/: chat.rs  completions.rs  embeddings.rs  error.rs  lib.rs  metrics.rs  streaming.rs
scripts/: benchmark.py  generate_perf_report.py  init_db.sql  setup.sh  stress_test.py  test_workflows.py
tests/: __init__.py  conftest.py  test_ai_endpoints.py  test_error_handling.py  test_fixtures.py  test_integration.py  test_openruntime.py  test_openruntime_enhanced.py  test_performance.py  test_runtime_engine.py  test_websocket.py
